Changed: Enlarged the custom games list.
Changed: Upgraded to Visual Studio 2017 from 2012. Hopefully shouldn't change anything.
Changed: Dependencies will now appear only above the patches that depend on them.
Changed: Required thcrap directories will now be created automatically if they do not exist.
Fixed: The tray icon's Main Games menu not working (no idea when that broke).
Fixed: thcrap's encoding for patches not using UTF-8.
Fixed: Error if patch directory does not exist.

1.0-pre3 (13/08/2019)
Added: Selected patches list to show the order of installed patches.
Added: Touhou 17 support.
Added: Dependency search for patches.
Changed: You can now resize the window to  smaller size than default. (buggy at the moment)
Changed: Updates to the patch repositories are shown in real time.
Fixed: Appdata/Replay folder being undetectable.
Fixed: Infinite loop when searching for thcrap repositories.
Fixed: local repositories having higher priority than thcrap.
Fixed: thcrap complaining about patch.js not existing.

1.0-pre2 (18/04/2019)
Added: thcrap Profile Editor. Lets you select patches from a list and configure the game list manually. The repository search starts at a configurable Url. Offline-only builds will also be released without this feature from now on.
Added: Customizable text color for buttons + the ability to disable the text or banner entirely.
Added: Saved states for the random games list.
Changed: Custom game categories no longer save their key name in the config (hopefully since they are no longer needed).
Changed: The File Select Dialog will now start from the last place a file was selected.
Changed: Custom banners now stretch to fit the button.
Changed: The settings in the settings tab will now only save when switching tabs or closing the program.
Fixed: Background pictures for games being one pixel off.
Fixed: Double Dealing Character typo.
Fixed: Custom banner checkbox not saving.
Fixed: Tab order for the controls.