@@ -1,21 +1,27 @@
 # Touhou-Launcher
-This is basically a rewrite of the Touhou Launcher created by Widdiful.\
+A rewrite of the Touhou Launcher created by Widdiful and an alternative to the thcrap configurator.\
 I tried making it more user friendly and added options wherever it was needed.
 
-If you don't know what that is, it's a program you can use and set up to launch any Touhou game (and even others if you're using the custom games tab) from the UI or the tray icon. It supports Neko Project II for PC-98 games, game exe files (the game itself, custom.exe or vpatch.exe) and thcrap.\
+The Touhou Launcher a program you can use and set up to launch any Touhou game (and even others if you're using the custom games tab) from the UI or the tray icon. It supports Neko Project II for PC-98 games, game exe files (the game itself, custom.exe or vpatch.exe), and thcrap.\
+In addition, it supports the addition and removal of patches from the thcrap patch repository using a checkbox and list format, with dependencies being added automatically.\
 There is also a "Replays" tab you can use to either navigate popular Touhou replay websites (Don't, actually. The .NET web browser is worse than Internet Explorer 8) or enter your own links to let the launcher automatically download and put them in the correct folder.\
 Finally, each game has a background picture that you can change to whatever you want.
 
 # Features
 Dynamic tray icon menu for custom games.\
-Proper thcrap support.\
+Proper thcrap support, including patch and game profile configuration. (The offline version ships without the configurator.)\
 No auto-updater. I know some of you probably hate things like that.\
 Customizability for how the games launch.\
 Russian language support (Thanks Lensrub).\
 Work-in-progress Japanese language support.\
 Custom language support for testing purposes if you're interested in translating it.\
-Almost all of the features from the original.\
-\
+Almost all of the features from the original Touhou Launcher.
+
+# How To Use
+First of all, fill in Neko Project II/thcrap_loader's paths in the settings tab.\
+You can then fill in the games' paths by right-clicking on their buttons.\
+If you're not using the offline build, you can choose the "Custom" option from the thcrap dropdown menu on a game's configuration screen to configure patches for that game.
+
 This is a nonprofit project developed independently by a fan.\
 Touhou belongs to Team Shanghai Alice.\
 \
