@@ -10,9 +10,13 @@ Changed: Enlarged the custom games list.
 Changed: Upgraded to Visual Studio 2017 from 2012. Hopefully shouldn't change anything.
 Changed: Dependencies will now appear only above the patches that depend on them.
 Changed: Required thcrap directories will now be created automatically if they do not exist.
+Changed: Repository descriptor json files will now be saved upon visiting the patch menu.
+Changed: Patch descriptor json files will now be updated whenever they're fetched from the repositories.
+Changed: The patch list will no longer lose focus on every repository check.
 Fixed: The tray icon's Main Games menu not working (no idea when that broke).
 Fixed: thcrap's encoding for patches not using UTF-8.
 Fixed: Error if patch directory does not exist.
+Fixed: Error when games.js does not exist.
 
 1.0-pre3 (13/08/2019)
 Added: Selected patches list to show the order of installed patches.
